# glyphhold

./: .dockerignore  .env.example  .gitignore  AGENT_CONNECTIONS.md  BACKUP_AND_RESTORE.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
app/: __init__.py  admin_cli.py  config.py  main.py
app/api/: agent.py  categories.py  dashboard.py  dashboard_json.py  dashboard_spa.py  entities.py  events.py  health.py  memories.py  secrets.py  validation.py
app/core/: auth.py  encryption.py  ids.py  logging.py  rate_limit.py  redaction.py  request_context.py  security.py
app/dashboard/: __init__.py
app/dashboard/static/: styles.css
app/dashboard/templates/: activity.html  api_keys.html  base.html  categories.html  entities.html  home.html  login.html  memories.html  memory_detail.html  secrets.html  setup.html
app/integrations/: __init__.py
app/integrations/client/: __init__.py  glyphhold.py
app/integrations/nexus/: __init__.py  (+1 more)
app/storage/: db.py  migrations.py
app/utils/: time.py
dashboard-ui/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-ui/src/: main.tsx  styles.css
glyphhold_client/: __init__.py  client.py
tests/: conftest.py  test_admin_cli.py  test_api_core.py  test_backup_restore.py  test_dashboard_flows.py  test_distribution_config.py  test_glyphhold_client.py  test_integrations.py  test_memory_quality.py  test_migrations.py  test_secret_safety.py  test_security_hardening.py
(+10 files in other folders)
