[project]
name = "glyphhold"
version = "0.1.0b1"
description = "A local, non-LLM memory and secrets service for agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=45.0.0",
    "fastapi>=0.115.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
glyphhold-admin = "app.admin_cli:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*", "glyphhold_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
